z-index fix for mobile menu

--- a/frontend/assets/css/variables.scss
+++ b/frontend/assets/css/variables.scss
@@ -16,6 +16,7 @@
 
   // Indexes
   --nav-index: 10000;
+  --mobile-menu-index:99999999;
 }
 
 $breakpoint:960px;
